2004-06-26  Kimura Fuyuki  <fuyuki@hadaly.org>

	* examples/Makefile.in, src/Makefile.in, test/Makefile.in: More
	dependencies and clean targets.

2004-06-25  Nobuo Yamashita  <nobsun@sampou.org>

	* plugins/allow-module.scm: added rfc.uri entry.

2004-06-23  Nobuo Yamashita  <nobsun@sampou.org>

	* Release 0.2.7:
	Bugfix release. 
	- Change unixdomain socket permission from o777 to o770.
	- Added --with-cgilogdir option to configure script.
	- Change log file directory for kahua.cgi from /tmp/t.log 
	to $(KAHUA_CGILOG_PATH)/kahua-cgi.log.

2004-06-16  Nobuo Yamashita  <nobsun@sampou.org>

	* src/Makefile.in: fixed a bug inserting 'exec ' repeatedly.

2004-06-09  Nobuo Yamashita  <nobsun@sampou.org>

	* src/Makefile.in: modified permission of $KAHUA_SOCKBASE
	from o777 to o770.

	* cgi/Makefile.in: modified permission of $KAHUA_CGILOGDIR
	from o777 to o770.
	
2004-06-09  Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua-keyserv, src/kahua-server, src/kahua-spvr: 
	modified unix-domain socket's permission from o777 to o770

	* configure.ac: added --with-cgilogdir option

	* cgi/Makefile.in, cgi/kahua.cgi.in, cgi/fix-shebang: 
	modified kahua cgi log path from /tmp/t.log 
	to $(KAHUA_CGILOG_PATH)/kahua-cgi.log.

	* INSTALL, doc/Setup.jp: 
	added description about permisson of kahua cgi log directory.

2004-06-02  Nobuo Yamashita  <nobsun@sampou.org>

	* src/Makefile.in: modified to make kahua-server and kahua-keyserv
	scripts use exec for invoking gosh.  It seems to fix the bug 
	that kahua-server process cannot be killed by SIGTERM when
	kahua-spvr is invoked as daemon or background job.

2004-05-25  Nobuo Yamashita  <nobsun@sampou.org>

	* Release 0.2.6 released.

	- Added session-state-ref, session-state-all-keys, and ref-object.
	- Modified make-kahua-collection to collect subclass instances.
	- Fixed test code made error in the case of using Gauche 0.8. 
	
2004-05-22  Shiro Kawai  <shiro@acm.org>
